# fastpython_sandbox

./: .gitignore  .gitlab-ci.yml  Makefile  setup.py
ci-image/: .dockerignore  Dockerfile
nativelib/: CMakeLists.txt  conanfile.txt
nativelib/cmake/: conan.cmake  configure_python.cmake
nativelib/scripts/: build.sh  build_clang_6.sh  build_clang_8.sh  generate_vs2015.bat  generate_vs2019.bat
nativelib/src/lib/: CMakeLists.txt  mylib.cpp
pylib/: math.py  math_cy.pyx  mynumeric.py  sobel_cy.pyx  sobel_nb.py  sobel_nb_aot.py  sobel_py.py
requirements/: conda.txt
tests/: test_math.py  test_sobel.py
